--- a/chat.html
+++ b/chat.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Chat app</title>
     <style>
       *{
@@ -8,12 +14,14 @@
         padding: 0;
         box-sizing: border-box;
         font-size: 30px;
+        font-family: 'Roboto', sans-serif;
       }
 
       body{
         width: 100%;
-        height: 100vh;
+        height: calc(100vh - calc(100vh - 100%));
         background-color: #15191C;
+        margin:auto;
       }
 
       .current-users{
@@ -92,6 +100,7 @@
 
       #type{
         width: 92%;
+        height:40px;
         border-radius: 1rem;
         background-color: rgb(56, 56, 56);
         border: none;
@@ -99,6 +108,7 @@
         color: white;
         font-size: 0.8rem;
         padding: 1%;
+        
       }
 
       #send{
@@ -113,23 +123,30 @@
       }
 
       #btn-svg{
-        width: 70%;
-        height: 20%;
+        width:90%;
+        height: 100%;
       }
 
       #users{
         width: 100%;
-        height: 80%;
+        height: 100%;
         padding: 5%;
+        background-color: black;
+        border-radius: 1rem;
+        overflow: auto;
+        overflow-x: hidden;
+        overflow-y: auto;
       }
 
       .chat-area{
         width: 100%;
         height: 88%;
         position: relative;
-        overflow-y: scroll;
-
         top: -9%;
+        overflow: auto;
+        overflow-x: hidden;
+        padding-right: 3%;
+        overflow-y: auto;
       }
 
       .outer-chat-div{
@@ -149,7 +166,7 @@
       }
 
       .home{
-        left: 58%;
+        left: 60%;
       }
 
       #outer{
@@ -160,43 +177,124 @@
       #message{
         display: inline-flex;
         min-width: auto;
-        padding: 0.3rem;
+        padding: 0.5rem;
         border-radius: 5px;
         flex-direction: column;
         justify-content: space-between;
         margin-top: 3%;
+        
+        font-weight: bolder;
       }
 
       #time{
         font-size: 0.3rem;
+        opacity: 50%;
+        padding-top: 4px;
         color: white;
         text-align: right;
+        font-weight: bolder;
+        position: relative;
+      }
+
+      #user{
+        width: 100%;
+        padding: 3%;
+        background-color: #15191C;
+        border-radius: 1rem;
       }
 
       #sender{
         font-size: 0.6rem;  
         margin-bottom: 2%;
       }
+
+      .notice{
+        padding: 0.1rem;
+        width: 100%;
+        border-radius: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: rgba(240, 255, 240, 0.616);
+        margin-top: 0.1%;
+        margin-bottom: 0.1%;
+      }
+
+      #notice-message{
+        font-size: 0.5rem;
+        font-weight: bolder;
+      }
+
       ::-webkit-scrollbar {
-  width: 10px;
-}
+        width:8px;
+      }
 
-/* Track */
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px rgb(29, 88, 156); 
-  border-radius: 10px;
-}
- 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: rgb(19, 19, 19); 
-  border-radius: 10px;
-}
+      ::-webkit-scrollbar-track {
+        background:#15191C;
+      }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #000000; 
-}
+      ::-webkit-scrollbar-thumb {
+        background: #888;
+        border-radius: 5px;
+      }
+
+      ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+      }
+
+      @media (max-width: 1100px){
+        #chat{
+          font-size: 0.5rem;
+        }
+      }
+
+      @media (max-width: 1000px){
+        .chat-area{
+          top: -5%;
+          height: 85%;
+        }
+      }
+
+      @media (max-width: 900px){
+        #chat{
+          font-size: 0.4rem;
+        }
+      }
+
+      @media (max-width: 700px){
+          *{
+              font-size: 22px;
+          }
+      }
+
+      @media (max-width: 550px){
+        *{
+          font-size: 18px;
+        }
+
+        #chat{
+          font-size: 0.8rem;
+        }
+      }
+
+      @media (max-width: 500px){
+        .current-users{
+          display: none;
+        }
+
+        .chat{
+          width: 100%;
+        }
+
+        #chat{
+          font-size: 0.7rem;
+        }
+
+        #time{
+          margin-top: 2%;
+          font-size: 0.5rem;
+        }
+      }
     </style>
   </head>
   <body>
@@ -211,20 +309,7 @@
     <div class="main">
       <div class="current-users">
         <input id="search-users" type="text" placeholder="Search users">
-        <div id="users">
-          <div id="user">
-            <p>Hari prasad</p>
-          </div>
-          <div id="user">
-            <p>Shibin</p>
-          </div>
-          <div id="user">
-            <p>Yasar</p>
-          </div>
-          <div id="user">
-            <p>Akash</p>
-          </div>
-        </div>
+        <div id="users"></div>
       </div>
       <div class="chat">
         <div id="chat-div">
@@ -246,9 +331,11 @@
       const urlparams = new URLSearchParams(window.location.search);
       const name = urlparams.get('name');
       const chat_area = document.querySelector('.chat-area');
+      const users = document.getElementById('users');
       document.getElementById('me').textContent = `Welcome, ${name}`;
 
       send.addEventListener('click', ()=> {
+
           socket.emit('chat', {
             message: input.value,
             name: name
@@ -262,14 +349,83 @@
         }
       })
 
-      socket.emit('register', {
-        name: name
+      socket.on('exit', (data)=> {
+        users.innerHTML="";
+        let msg;
+        data.names.forEach(person => {
+          const p = document.createElement('p');
+          p.textContent = person.name;
+          const div = document.createElement('div');
+          div.id = 'user';
+          div.appendChild(p);
+          users.appendChild(div);
+        });
+        const p = document.createElement('p');
+        p.id = 'notice-message';
+        p.textContent = `${data.name} left the chat room`;
+        p.style.color = 'red';
+        div = document.createElement('div');
+        div.classList.add('notice');
+        div.appendChild(p);
+        chat_area.appendChild(div);
+        if(chat_area.clientHeight < chat_area.scrollHeight){
+            chat_area.scrollTop = chat_area.scrollHeight - chat_area.clientHeight;
+        }
+      })
+
+      socket.emit('register',name);
+
+      socket.on('notice', (data)=> {
+        let msg;
+        if(data.id === socket.id){
+          msg = "You joined chat room";
+        }
+        else{
+          msg = `${data.name} joined the chat room`;
+        }
+        const p = document.createElement('p');
+        p.id = 'notice-message';
+        p.textContent = msg;
+        p.style.color = 'green';
+        const div = document.createElement('div');
+        div.classList.add('notice');
+        div.appendChild(p);
+        chat_area.appendChild(div);
+        if(chat_area.clientHeight < chat_area.scrollHeight){
+            chat_area.scrollTop = chat_area.scrollHeight - chat_area.clientHeight;
+        }
+      })
+
+      socket.on('add', (data)=> {
+        users.innerHTML="";
+        data.forEach(person => {
+          const p = document.createElement('p');
+          p.textContent = person.name;
+          const div = document.createElement('div');
+          div.id = 'user';
+          div.appendChild(p);
+          users.appendChild(div);
+        })
+      })
+
+      socket.on('getData', (data)=> {
+        socket.emit('data', name);
       })
 
       socket.on('chat', (data)=>{
           const sender = data.name;
           const message = data.message;
-          const time = data.time;
+          const time = new Date();
+          let current;
+          if(time.getHours()>=12){
+              const is = 'PM';
+              current = `${time.getHours()-12}:${time.getMinutes()}${is}`;
+          }
+          else{
+              const is = 'AM';
+              current = `${time.getHours()}:${time.getMinutes()<10? '0'+time.getMinutes():time.getMinutes()}${is}`;
+          }
+          if(message!=''){
           const span = document.createElement('span');
           const span1 = document.createElement('span');
           const span2 = document.createElement('span');
@@ -277,18 +433,14 @@
           span1.id = "sender";
           span2.id = 'time';
           span.textContent = message;
-          span1.textContent = sender;
-          span2.textContent = time;
+          span2.textContent = current;
           const p = document.createElement('p');
           p.id = 'message';
-          p.appendChild(span1);
-          p.appendChild(span);
-          p.appendChild(span2);
           const div1 = document.createElement('div');
           div1.classList.add('outer-chat-div');
           div2 = document.createElement('div');
           div2.id = 'outer';
-          if(sender === name){
+          if(data.id === socket.id){
             div1.classList.add('home');
             p.style.backgroundColor = 'royalblue';
             div1.style.display = "flex";
@@ -297,11 +449,20 @@
           else{
             div1.classList.add('away');
             p.style.backgroundColor = 'rgb(56, 56, 56)';
+            span1.textContent = sender;
           }
+          p.appendChild(span1);
+          p.appendChild(span);
+          p.appendChild(span2);
           div1.appendChild(p);
           div2.appendChild(div1);
           chat_area.appendChild(div2);
-      })
+          if(chat_area.clientHeight < chat_area.scrollHeight){
+            chat_area.scrollTop = chat_area.scrollHeight - chat_area.clientHeight;
+          }
+        }
+
+      });
 
     </script>
   </body>
