--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       body{
         width: 100%;
-        height: calc(100vh - calc(100vh - 100%));
+        height: 95vh;
         background-color: #15191C;
         margin:auto;
       }
