--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         font-size: 30px;
         font-family: 'Roboto', sans-serif;
       }
+      html{
+        height:95vh;
+      }
 
       body{
         width: 100%;
